argo-events/overlays/production/ingress-webhook-eventsource.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-eventsource
  namespace: argo-events
spec:
  rules:
  - host: webhook.192-168-3-196.nip.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: gitlab-eventsource-svc
            port: 
              number: 12000
